added method to get average level of party